changed somethings in the pom.xml